PyMaker/datas/object2/RawHTML/Python_DOC_referPages.why-does-my-print-statement-produce-a-syntaxerror-invalid-syntax.txt
<div class="post-text" itemprop="text">
<p>Does anyone know how to make this work? (in python)
I am a beginner by the way :)</p>
<pre><code>import random
def roll():
    input1 = input("Player1, type 'ROLL' to roll.")
    if (input1 == "ROLL"):
        dice1 = random.randint(1,6)
        dice2 = random.randint(1,6)
        print("You rolled a " + dice1() + " and a " + dice2() ".")

    else:
        pass

roll()
</code></pre>
<p>I get:</p>
<pre><code>  File "main.py", line 9
    print("You rolled a " + dice1() + " and a " + dice2() ".")
                                                            ^
SyntaxError: invalid syntax
</code></pre>
<p>I also want it to repeat the "Player1, type 'ROLL' to roll." if the input doesnt equal ROLL
Please :) Thank you</p>
</div>
<div class="post-text" itemprop="text">
<p>You have an invalid syntax near:</p>
<pre><code>print("You rolled a " + dice1() + " and a " + dice2() ".")
</code></pre>
<p>Using <a href="https://www.digitalocean.com/community/tutorials/how-to-use-string-formatters-in-python-3" rel="nofollow noreferrer"><code>string format</code></a>:</p>
<p><strong>Replace this</strong>:</p>
<pre><code>print("You rolled a " + dice1() + " and a " + dice2() ".")
</code></pre>
<p><strong>With this</strong>:</p>
<pre><code>print("You rolled a {} and {}".format(dice1,dice2))
</code></pre>
<blockquote>
<p>Note: You can use a <code>while loop</code> to keep taking the <code>user-input</code> unless the <code>input</code> matches with <code>ROLL</code>:</p>
</blockquote>
<p><strong>Hence</strong>:</p>
<pre><code>import random

def roll():
    while True:
        input1 = input("Player1, type 'ROLL' to roll.")
        if input1 == "ROLL":
            dice1 = random.randint(1,6)
            dice2 = random.randint(1,6)
            print("You rolled a {} and {}".format(dice1, dice2))
            break  
roll()
</code></pre>
<p><strong>OUTPUT</strong>:</p>
<pre><code>Player1, type 'ROLL' to roll.whaaaat?
Player1, type 'ROLL' to roll.okay
Player1, type 'ROLL' to roll.roll
Player1, type 'ROLL' to roll.ROLL
You rolled a 2 and 2
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>There's a syntax error in the <code>print</code>.</p>
<p>Both <code>int</code> values need to be cast to string using <code>str()</code>.</p>
<p><code>dice1</code> and <code>dice2</code> are not functions so we can't write <code>()</code> next to them.</p>
<pre><code>print("You rolled a " + dice1() + " and a " + dice2() ".")
</code></pre>
<p>should be </p>
<pre><code>print("You rolled a " + str(dice1) + " and a " + str(dice2) + ".")
</code></pre>
<p>Preferrably, you can use the <code>format</code> function that comes with any string.</p>
<pre><code>print("You rolled a {dice1} and a {dice2}.\n".format(
        dice1=dice1,
        dice2=dice2
    )
)
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>The whole function should be:</p>
<pre><code>import random
def roll():
    input1 = input("Player1, type 'ROLL' to roll.")
    if (input1 == "ROLL"):
        dice1 = random.randint(1,6)
        dice2 = random.randint(1,6)
        print("You rolled a %s and a %s." % (dice1,dice2))

    else:
        pass

roll()
</code></pre>
<p>If you mean to show the two variables, <code>dice1</code> and <code>dice2</code>.</p>
<p>Use:</p>
<pre><code>print("You rolled a %s and a %s." % (dice1,dice2))
</code></pre>
<p>Instead of:</p>
<pre><code>print("You rolled a " + dice1() + " and a " + dice2() ".")
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You forgot a comma or + in the print statment.
You also call variables dice1 dice2 as functions.</p>
<pre class="lang-py prettyprint-override"><code>import random

def roll():
    input1 = input("Player1, type 'ROLL' to roll. ")
    print(input1)
    if input1 == 'ROLL':
        dice1 = random.randint(1,6)
        dice2 = random.randint(1,6)
        print("You rolled a " + str(dice1) + " and a " + str(dice2) + ".")
    else:
        pass

roll()
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Python's <code>random.randint</code> returns an integer so you don't need to call your <code>dice1</code> and <code>dice2</code> variables.
Replace this line:</p>
<pre><code>print("You rolled a " + dice1() + " and a " + dice2() ".")
</code></pre>
<p>with this:</p>
<pre><code>print("You rolled a " + dice1 + " and a " + dice2 ".")
</code></pre>
<p>reference for Python's <a href="https://docs.python.org/2/library/random.html" rel="nofollow noreferrer">random module</a></p>
</div>
<span class="comment-copy">you forgot a comma at the print line</span>
<span class="comment-copy">What's wrong with the above code?</span>
<span class="comment-copy">What have you tried? What you wanna do...please specify in the question</span>
<span class="comment-copy">Why do you apply parentheses on dice1 and dice2? They have each been assigned some int. Just use str(dice1) and str(dice2), or a format string with %d.</span>
<span class="comment-copy">Dupe <a href="https://stackoverflow.com/questions/12018992/print-combining-strings-and-numbers">https://stackoverflow.com/questions/12018992/print-combining-strings-and-numbers</a></span>
<span class="comment-copy">How can you add <code>int</code> and a <code>str</code>?</span>
